<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.m391.game.ui.TicTacToeViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.GameFragment">

        <LinearLayout
            android:id="@+id/game_info"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/table_border"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|start"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:padding="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    android:padding="10dp"
                    android:src="@drawable/x" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/x_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@{viewModel.xScore.toString()}"
                android:textColor="@color/cardview_shadow_start_color"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/fasla"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/o_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@{viewModel.oScore.toString()}"
                android:textColor="@color/cardview_shadow_start_color"
                android:textSize="50sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|end"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:padding="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    android:src="@drawable/o" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/game_info"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/table_border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintDimensionRatio="1:1">

            <LinearLayout
                android:id="@+id/game_bord"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="top"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cell_1_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/empty_sell"
                    android:focusable="true"
                    android:padding="10dp"
                    android:tag="@string/sell_1_1"
                    tools:ignore="NestedWeights,DuplicateSpeakableTextCheck" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/darker_gray" />

                <ImageView
                    android:id="@+id/cell_1_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/empty_sell"
                    android:focusable="true"
                    android:padding="10dp"
                    android:tag="@string/sell_1_2" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/darker_gray" />

                <ImageView
                    android:id="@+id/cell_1_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/empty_sell"
                    android:focusable="true"
                    android:padding="10dp"
                    android:tag="@string/sell_1_3" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cell_2_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/empty_sell"
                    android:focusable="true"
                    android:padding="10dp"
                    android:tag="@string/sell_2_1"
                    tools:ignore="NestedWeights" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <ImageView
                    android:id="@+id/cell_2_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/empty_sell"
                    android:focusable="true"
                    android:padding="10dp"
                    android:tag="@string/sell_2_2" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <ImageView
                    android:id="@+id/cell_2_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/empty_sell"
                    android:focusable="true"
                    android:padding="10dp"
                    android:tag="@string/sell_2_3" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cell_3_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/empty_sell"
                    android:focusable="true"
                    android:padding="10dp"
                    android:tag="@string/sell_3_1"
                    tools:ignore="NestedWeights" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:background="@android:color/darker_gray" />

                <ImageView
                    android:id="@+id/cell_3_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/empty_sell"
                    android:focusable="true"
                    android:padding="10dp"
                    android:tag="@string/sell_3_2" />


                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp"
                    android:background="@android:color/darker_gray" />

                <ImageView
                    android:id="@+id/cell_3_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/empty_sell"
                    android:focusable="true"
                    android:padding="10dp"
                    android:tag="@string/sell_3_3" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>